# backend

./: pyproject.toml  test.rest
backend/: requirements.txt
backend/api/: models.py  serializers.py  translation.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/database/: db.sqlite3
